--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 agent_config:
-  max_checks: 5 # limits number of checks (to prevent excessive llm calls)
+  max_checks: 3 # limits number of checks (to prevent excessive API calls)
 
 llm:
   load_params:
@@ -33,7 +33,7 @@ sources:
         output_fields: ["text", "title"]
       embedding_params:
         load_params:
-          module: "langchain.embeddings"
+          module: "langchain_community.embeddings"
           class: HuggingFaceBgeEmbeddings
         init_params: 
           model_name: "BAAI/bge-small-en-v1.5"
@@ -56,7 +56,7 @@ sources:
         output_fields: ["text", "title"]
       embedding_params:
         load_params:
-          module: "langchain.embeddings"
+          module: "langchain_community.embeddings"
           class: HuggingFaceBgeEmbeddings
         init_params: 
           model_name: "BAAI/bge-small-en-v1.5"
