--- a/config.yaml
+++ b/config.yaml
@@ -18,6 +18,7 @@ llm:
   #   temperature: 0
 
 sources:
+  # requires a running Milvus vector database
   - source_type: milvus_vdb
     config: 
       id: statutes
@@ -41,6 +42,7 @@ sources:
           encode_kwargs: { normalize_embeddings: True }
           query_instruction: "Represent this sentence for searching relevant passages: "
 
+  # requires a running Milvus vector database
   - source_type: milvus_vdb
     config: 
       id: judgments 
@@ -64,6 +66,7 @@ sources:
           encode_kwargs: { normalize_embeddings: True }
           query_instruction: "Represent this sentence for searching relevant passages: "
 
+  # requires TAVILY_API_KEY defined as environment variable
   - source_type: tavily_web
     config: 
       id: web_search
